--- a/templates/coordinator/coordinator_dashboard.html
+++ b/templates/coordinator/coordinator_dashboard.html
@@ -46,7 +46,7 @@
     height: 100%;
 }
 .navigation li{
-    padding-top: 8%;
+    padding-top: 1%;
         text-transform: uppercase;
     list-style-type: none;
 }
@@ -119,7 +119,7 @@
 }
 
         h2 {
-            margin-top: 0;
+            margin: 0;
         }
         .dashboard-content { /* Background color for the content area */
     padding: 20px;
@@ -405,11 +405,30 @@
             </a>
         </li>
 {#                                <li>#}
-{#            <a href="#" onclick="loadContent('{% url 'part_qr_scan' %}')">#}
+{#            <a href="#" onclick="loadContent('{% url 'merch_list' %}')">#}
 {#                <i class="fa fa-list"></i> <!-- Font Awesome icon for 'View Participants' -->#}
-{#                Scan QR#}
+{#                Merch Assign#}
 {#            </a>#}
 {#        </li>#}
+{#                                <li>#}
+{#            <a href="#" onclick="loadContent('{% url 'merch_success' %}')">#}
+{#                <i class="fa fa-list"></i> <!-- Font Awesome icon for 'View Participants' -->#}
+{#                Merch Assigned#}
+{#            </a>#}
+{#        </li>#}
+{#                                <li>#}
+{#            <a href="#" onclick="loadContent('{% url 'meals_list' %}')">#}
+{#                <i class="fa fa-list"></i> <!-- Font Awesome icon for 'View Participants' -->#}
+{#                Assign Meal#}
+{#            </a>#}
+{#        </li>#}
+{#                                <li>#}
+{#            <a href="#" onclick="loadContent('{% url 'meals_success' %}')">#}
+{#                <i class="fa fa-list"></i> <!-- Font Awesome icon for 'View Participants' -->#}
+{#                Meals Checkedin#}
+{#            </a>#}
+{#        </li>#}
+
 
     </ul>
 <div class="logout-button">
