--- a/templates/coordinator/edit_participant.html
+++ b/templates/coordinator/edit_participant.html
@@ -5,10 +5,15 @@
         background: url("{% static 'img/edit_participant.jpg' %}");
         background-size: cover;
         background-repeat: no-repeat;
+        overflow: auto;
     }
+    h2{
+        margin: 0;
+    }
+
       /* Style the form container */
       .form-container {
-        width: 80%;
+        width: 40%;
         margin: 0 auto;
         padding: 20px;
         background: rgba(255, 255, 255, 0.2);
@@ -16,6 +21,7 @@
         border-radius: 10px;
         backdrop-filter: blur(10px);
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+          overflow: auto;
       }
 
       /* Style the form fields */
@@ -50,11 +56,14 @@
 
       /* Style the form submit button */
       .form-control button[type="submit"] {
+          left: 52%;
+          position: absolute;
         padding: 10px 20px;
         background: #3498db;
         border: none;
         color: #fff;
         border-radius: 5px;
+          width: 45%;
         cursor: pointer;
       }
 
@@ -65,6 +74,21 @@
           background: -webkit-linear-gradient(rgb(188, 12, 241), rgb(212, 4, 4));
           -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+          position: absolute;
+          left: 45%;
+          top: 3%;
+      }
+      #cancel1{
+          width: 45%;
+          padding: 10px 20px;
+        background: #fc0217;
+        border: none;
+        color: #fff;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+      #cancel1:hover{
+          background: #9b010e;
       }
    </style>
 
@@ -77,7 +101,7 @@
           {{ form.as_p }}
          <button type="submit">Submit</button>
       </form>
-       <a href="{% url 'coordinator_dashboard' %}"><button>Cancel</button></a>
+       <a id="cancel" href="{% url 'coordinator_dashboard' %}"><button id="cancel1">Cancel</button></a>
    </div>
 </body>
 </html>
