--- a/templates/coordinator/coordinator_dashboard.html
+++ b/templates/coordinator/coordinator_dashboard.html
@@ -15,7 +15,7 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url('{% static 'img/coordinator_dash.jpg' %}');
+            background-image: url('https://i.ibb.co/zFpt3vh/coordinator-dash.jpg');
             background-size: cover;
             background-position: center;
             overflow: hidden;
