--- a/templates/superuser/superuser_dashboard.html
+++ b/templates/superuser/superuser_dashboard.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url('{% static 'img/superuser_dash.jpg' %}');
+            background-image: url('https://i.ibb.co/xM0pwLY/superuser-dash.jpg');
             background-size: cover;
             background-position: center;
             overflow: hidden;
