--- a/templates/superuser/add_coordinator.html
+++ b/templates/superuser/add_coordinator.html
@@ -151,7 +151,7 @@ label {
                 <button type="submit" class="btn">Add Coordinator</button>
             </div>
         </form>
-        <img class="per" src="{% static 'img/add_coord.png' %}" alt="3d-person">
+        <img class="per" src="https://i.ibb.co/f2Z3PCH/add-coord.png" alt="3d-person">
     </div>
 </div>
 <script>
